verif/test/deca/context/invalid/op-bin-or-bad-type-verif.res
src/test/deca/context/invalid/op-bin-or-bad-type.deca:11:16: Incompatible types for boolean binary operator '||' between 'boolean' and 'int'
